fix: Add a new heading no longer collapses below headings. #159 #115

--- a/src/stalin.css
+++ b/src/stalin.css
@@ -186,6 +186,11 @@
   }
   
   
+  /*fix content blur in canvas embed markdown*/
+  .canvas-node .markdown-embed-content .is-flashing {
+    mix-blend-mode: normal;
+  }
+  
   
   /* experimental */
   
